# owl-station

./: .envrc  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: about.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-45a48b56c8ad2523a9a31c69be39928e.min.css
examples/example01/: Case_jack+jill.toml  Case_joe.toml  Case_joe.xlsx  Case_john+sally.xlsx  Case_kim+sam-bequest.toml  Case_kim+sam-bequest_test2.toml  HFP_jack+jill.xlsx  owl_hydra_run.py
examples/example01/conf/: config.yaml
examples/example01/conf/hydra/sweep/: flat.yaml
examples/example01/conf/longevity/: default.yaml
examples/example01/conf/optimization/: default.yaml
examples/example01/conf/solver/: default.yaml
examples/example01/results/jack+jill/2025-12-30/07-19-11/run_0/: Case_jack+jill.xlsx  Case_jack+jill_metrics.json  Case_jack+jill_summary.json  hydra_meta.yaml
examples/example01/results/jack+jill/2025-12-30/07-27-39/: multirun.yaml
examples/owlplanner/: test.toml
scripts/: sync_owl_examples.py
site-src/: _quarto.yml  about.qmd  index.qmd
src/owlroost/cli/: _main.py  cmd_cases.py  cmd_results.py  cmd_run.py  utils.py
src/owlroost/conf/: config.yaml
src/owlroost/conf/asset_allocations/: default.yaml
src/owlroost/conf/hydra/sweep/: flat.yaml
src/owlroost/conf/rates/: default.yaml
src/owlroost/conf/trial/: default.yaml
src/owlroost/core/: configure_logging.py  longevity.py  metrics_from_plan.py  owl_runner.py  toml_utils.py
src/owlroost/hydra/: helpers.py  owl_hydra_run.py  trial_worker.py
src/owlstation/: solver_info.py  version.py
src/owlstation/cli/: _main.py  cmd_run.py  cmd_runhydra.py
src/owlstation/core/: override_parser.py  owl_runner.py  toml_utils.py
tests/core/: test_longevity.py
(+59 files in other folders)
