[project]
name = "owl-station"
version = "0.2.0"
description = "OWL-Station - experimental design and orchestration framework built on Optimal Wealth Laboratory (OWL)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    # OWL is under active development; pin to commit for reproducibility
    "owlplanner @ git+https://github.com/mdlacasse/Owl.git@7abca00",  # 2025-12-25
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pre-commit>=3.7.0",
]

[project.scripts]
owlstation = "owlstation.cli._main:cli"
owls       = "owlstation.cli._main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------------
# Hatch configuration
# -------------------------------

[tool.hatch.version]
path = "src/owlstation/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/owlstation"]

# -------------------------------
# Ruff configuration
# -------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting (isort replacement)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled pragmatically
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# -------------------------------
# Ruff formatter (optional but enabled)
# -------------------------------

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
